@@ -3736,6 +3736,19 @@ $wgBlockDisablesLogin = false;
 $wgWhitelistRead = false;
 
 /**
+ * Pages anonymous user may see, set as an array of regular expressions.
+ *
+ * @par Example:
+ * @code
+ * $wgWhitelistReadRegexp = array ( "/Main_Page/u", "@^UsEr.*@i");
+ * @endcode
+ *
+ * @note This will only work if $wgGroupPermissions['*']['read'] is false --
+ * see below. Otherwise, ALL pages are accessible, regardless of this setting.
+ */
+$wgWhitelistReadRegexp = false;
+
+/**
  * Should editors be required to have a validated e-mail
  * address before being allowed to edit?
  */
