@@ -142,6 +142,7 @@ upgrade PHP if you have not done so prior to upgrading MediaWiki.
 * jquery.messageBox which appears to be unused by both core and extensions has
   been removed.
 * (bug 34939) made link parsking insensitive ([HttP://])
+* Added $wgWhitelistReadRegexp for regex whitelisting
 
 === Bug fixes in 1.20 ===
 * (bug 30245) Use the correct way to construct a log page title.
